DSS - 4177, DSS - 4318 : fleet & loadable quantity bug fix (#2183)
* initial commit

* DSS - 4177 : Bunkering ports are not showing on Map shore dashboard fleet page
DSS - 4318 : LOADABLE QTY popup>>UI issue when loadine is tropical to summer or others

* added active vessel card border

--- a/web/cpdss-portal/apps/cpdss/src/app/business/fleet/fleet-vessel-card/fleet-vessel-card.component.scss
+++ b/web/cpdss-portal/apps/cpdss/src/app/business/fleet/fleet-vessel-card/fleet-vessel-card.component.scss
@@ -25,6 +25,7 @@
 }
 
 .active-vessel {
+  background-color: #fffefe;
 }
 
 .progress-vessel {
